# Mensa-Bot

./: .gitignore  .gitmodules  README.md  actions_wrapper.py  autocrop.py  burger.py  fetch_mensa.py  flake.nix  index.html  mensa.py  mensa_bot.py  menu.py  message.py  parse_menus.py  prepare_week.py  preview.py  pyproject.toml  requirements.txt  test_correction.py  test_parser.py  uksh.py
.github/workflows/: prepare_week.yaml  run_mensa_bot.yaml  update_channel.yaml
fetch_mensa/: Cargo.toml  menu.json
fetch_mensa/src/: lib.rs  main.rs
public/: index.html  menus.json
