[project]
name = "mensa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.5.2",
  "diffusers>=0.32.2",
  "numpy==2.1.3",
  "protobuf>=6.30.1",
  "pymupdf==1.24.9",
  "pytesseract==0.3.13",
  "pytest==8.3.3",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
  "transformers>=4.50.1",
]
